--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "db": "workspace:*",
     "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ui": "workspace:*"
+    "ui": "workspace:*",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.4.19",
