--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "db",
+  "name": "store",
   "version": "1.0.0",
   "description": "",
-  "main": "./index.ts",
-  "types": "./index.ts",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,8 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/mongoose": "^5.11.97",
-    "mongoose": "^7.5.0",
-    "zod": "^3.22.2"
+    "recoil": "^0.7.7"
   }
 }
