--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "turbo-repo-proj",
+  "packageManager": "pnpm@8.6.10",
   "private": true,
   "scripts": {
     "build": "turbo run build",
@@ -11,7 +13,5 @@
     "prettier": "^3.0.2",
     "tsconfig": "workspace:*",
     "turbo": "latest"
-  },
-  "packageManager": "pnpm@8.6.10",
-  "name": "turbo-repo-proj"
+  }
 }
