--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,6 +2,7 @@
   "name": "web",
   "version": "1.0.0",
   "private": true,
+  "packageManager": "pnpm@8.6.10",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
